changed text to donate image and fixed alignment

--- a/themes/janeswalk/css/pages/sass/screen.scss
+++ b/themes/janeswalk/css/pages/sass/screen.scss
@@ -127,8 +127,8 @@ body {
     }
 
     .o-content {
-      width: 41%;
-      margin-left: -20.5%;
+      width: 45%;
+      margin-left: -22.5%;
       padding: 0;
       box-sizing: border-box;
       height: auto;
